@@ -201,6 +201,26 @@ Xu          ,Xu          , Qxu         , Qxu         , Ql          , Ql         
         image="items/orcish-flag.png"
     [/item]
     [label]
+        x,y=10,9
+        text="Let's fight"
+    [/label]
+    
+    [event]
+        name=moveto
+        first_time_only=no
+        [filter]
+            x=10
+            y=9
+            side=1
+        [/filter]
+	[animate_unit]
+	flag=attack
+	hit=hit
+	[primary_attack]
+	[/primary_attack]
+	[/animate_unit]
+    [/event]
+    [label]
         x,y=4,4
         text="Open, Sesame!"
     [/label]
