@@ -7,6 +7,8 @@ Version 1.3.14+svn:
    * Fixed boost test compile with 1.34.1
    * Make wesnoth work properly again if the datadir contains ../
    * Fixed some type of addon not being uninstallable (bug #10788)
+   * some filtering was added to the [animate_unit] action to actually make it
+     usefull
 
 Version 1.3.14:
  * campaigns:
